Added compile-time switch for TCMP vs Classic Tappies

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -3,6 +3,8 @@
     <head>
         <title ng-bind="pageTitle"></title>
 
+        <!-- cfg:js -->
+        <!-- endinject -->
         <!-- bower:css -->
         <!-- endinject -->
         <!-- inject:css -->
